Refactor: lab4